fixed sneaky margin on mobile displays

--- a/public/stylesheets/release-thumb.css
+++ b/public/stylesheets/release-thumb.css
@@ -44,6 +44,6 @@ article.release a {
     padding-bottom: 100% !important;
 
     margin-top: 1em;
-    margin-right: 1em;
+    margin-right: 0;
   }
 }
